230901 - Transfer fixes , CRON JOBS, authorization fixes
