# app/models/user.model.js
@@ -1,5 +1,11 @@
 module.exports = (sequelize, Sequelize) => {
     const User = sequelize.define("users", {
+      firstName: {
+        type: Sequelize.STRING
+      },
+      lastName: {
+        type: Sequelize.STRING
+      },
       username: {
         type: Sequelize.STRING
       },
@@ -7,6 +13,12 @@ module.exports = (sequelize, Sequelize) => {
         type: Sequelize.STRING
       },
       password: {
+        type: Sequelize.STRING
+      },
+      isActive:{
+        type: Sequelize.BOOLEAN
+      },
+      activationCode: {
         type: Sequelize.STRING
       }
     });
