# app/routes/auth.routes.js
@@ -21,5 +21,7 @@ module.exports = function(app) {
 
   app.post("/api/auth/signin", controller.signin);
   app.post("/api/auth/signout", controller.signout);
+  app.post("/api/auth/:code", controller.activateUser);
+
 
 };
